--- a/src/app/components/resume/skills/skills-component.component.html
+++ b/src/app/components/resume/skills/skills-component.component.html
@@ -39,7 +39,7 @@
         <td>
           <i class="fa fa-fw fa-star star-orange"></i>
         </td>
-        <td>Essential skills, will primarily accept jobs using these technologies.</td>
+        <td>Essential skills, will primarily prefer jobs using these technologies.</td>
       </tr>
       <tr>
         <td>
