wording of header

--- a/src/app/components/resume/skills/skills-component.component.html
+++ b/src/app/components/resume/skills/skills-component.component.html
@@ -5,7 +5,7 @@
       <th>Category</th>
       <th>Skill</th>
       <th>Tags</th>
-      <th class="d-print-none">Example work</th>
+      <th class="d-print-none">Work sample</th>
     </tr>
   </thead>
   <ng-container *ngFor="let model of gridModels">
