--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="about-me-content pt-2">
     <h5>About me</h5>
-    <p>I am a Kuala Lumpur-based Software Developer. I primarily code within the .NET stack.</p>
+    <p>I am a Stockholm-based Software Developer. I primarily code within the .NET stack.</p>
     <div>
       <a id="emailLink" href="mailto:arsh90@gmail.com"><i class="fa fa-fw fa-envelope"></i> arsh90@gmail.com</a>
       <a routerLink="/resume">
