--- a/src/app/components/resume/resume.component.scss
+++ b/src/app/components/resume/resume.component.scss
@@ -31,3 +31,7 @@ button.btn-back-to-top {
     z-index: 99; 
     box-shadow: 1px 1px 1px 1px #ccc;
 }
+
+span.employment-history-location {
+    font-size:smaller;
+}
