Layout change, added other info, changed photo

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,8 +9,9 @@
       </button>
       <div [ngClass]="{'collapse': navbarCollapsed}" class="navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav shad-orange-navbar" (click)="toggleNav()">
-          <a class="nav-item nav-link" routerLinkActive="active" routerLink="/projects">Projects</a>
           <a class="nav-item nav-link" routerLinkActive="active" routerLink="/resume">Resume</a>
+          <a class="nav-item nav-link" routerLinkActive="active" routerLink="/projects">Projects</a>
+          <a class="nav-item nav-link" routerLinkActive="active" routerLink="/contact">Contact</a>
         </div>
       </div>
     </div>
