Professional projects page

--- a/src/app/components/projects-landing/projects-landing.component.html
+++ b/src/app/components/projects-landing/projects-landing.component.html
@@ -6,7 +6,7 @@
         <p class="card-text">
           The projects/products I have worked in during my professional experience as Software Developer or Consultant.
         </p>
-        <button type="button" disabled class="btn btn-primary">Coming soon</button>
+        <a routerLink="/pro-projects" class="btn btn-primary">View</a>
       </div>
     </div>
   </div>
